@@ -12521,6 +12521,7 @@ src/util/png_info.1 svneol=native#text/plain
 src/util/png_info.c svneol=native#text/plain
 src/util/query.1 svneol=native#text/plain
 src/util/query.c svneol=native#text/plain
+src/util/random.1 svneol=native#text/plain
 src/util/random.c svneol=native#text/plain
 src/util/remapid.1 svneol=native#text/plain
 src/util/remapid.c svneol=native#text/plain
